[package]
name = "brickstream-proxy"
version = "0.1.0"
authors = ["cmyip"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.7", default-features = false}
serde = { version = "1.0", features = ["derive"] }
log = "0.4.14"
dotenv = "0.15.0"
regex = "1.4.6"
rand = "0.8.3"
rocket_cors = { version = "0.5.1", default-features = false }

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json"]
